<resources>
    <string name="app_name">FillNDrive</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="maps_activity_label">Maps Activity</string>
    <string name="main_activity_label">Main Activity</string>
    <string name="cerca">Cerca</string>
    <string name="benzina">Benzina</string>
    <string name="diesel">Diesel</string>
    <string name="gpl">GPL</string>
    <string name="metano">Metano</string>
    <string name="elettrico">Elettrico</string>
    <string name="labelDistanza">Distanza massima (in km): </string>
    <string name="labelConsumo">Consumo medio del veicolo (km/l): </string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Hi there
    </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="search">Search</string>
    <string name="search_location">Search location</string>
</resources>