<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/fuelRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/benzina"
            android:textAlignment="center"
            android:button="@drawable/custom_radio_button"
            android:checked="true" />
        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diesel"
            android:textAlignment="center"
            android:button="@drawable/custom_radio_button" />
        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gpl"
            android:textAlignment="center"
            android:button="@drawable/custom_radio_button" />
        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metano"
            android:textAlignment="center"
            android:button="@drawable/custom_radio_button" />
    </RadioGroup>

    <!-- Horizontal layout for text and number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_gravity="end">

        <!-- Label with random text -->

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/servitoSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/labelServito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <!-- 2-digit editable number -->
    </LinearLayout>

</LinearLayout>